unpackaged/main/default/objects/ETT_Fleet_Inspection__c/ETT_Fleet_Inspection__c.object-meta.xml
<CustomObject>
    <label>Fleet Inspection</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Fleet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet Inspection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>