unpackaged/main/default/objects/ETT_Fleet_Inspection__c/fields/ETT_Account__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fleet Inspection</relationshipLabel>
    <relationshipName>Fleet_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>