unpackaged/main/default/objects/ETT_Fleet_Inspection__c/fields/ETT_LI__c.field-meta.xml
<CustomField>
    <fullName>ETT_LI__c</fullName>
    <label>LI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>