unpackaged/main/default/objects/ETT_Fleet_Inspection__c/fields/ETT_Location__c.field-meta.xml
<CustomField>
    <fullName>ETT_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>