unpackaged/main/default/objects/ETT_Fleet_Inspection__c/fields/ETT_Minimum_Pull_Point__c.field-meta.xml
<CustomField>
    <fullName>ETT_Minimum_Pull_Point__c</fullName>
    <label>Minimum Pull Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>