unpackaged/main/default/objects/ETT_Fleet_Inspection__c/fields/ETT_Odo_Meter__c.field-meta.xml
<CustomField>
    <fullName>ETT_Odo_Meter__c</fullName>
    <label>Odo Meter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>