unpackaged/main/default/objects/ETT_Fleet_Inspection__c/fields/ETT_Pattern_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Fleet Inspection</relationshipLabel>
    <relationshipName>Fleet_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>