unpackaged/main/default/objects/ETT_Fleet_Inspection__c/fields/ETT_Signature__c.field-meta.xml
<CustomField>
    <fullName>ETT_Signature__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>