unpackaged/main/default/objects/ETT_Fleet_Inspection__c/fields/ETT_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Fleet Inspection</relationshipLabel>
    <relationshipName>Fleet_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>