unpackaged/main/default/objects/ETT_Fleet_Inspection__c/fields/ETT_Vehicle_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ETT_Vehicle_Configuration__c</fullName>
    <label>ETT Vehicle Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4X2 Axle</fullName>
            </value>
            <value>
                <fullName>4X4 Axle</fullName>
            </value>
            <value>
                <fullName>6X2 Axle</fullName>
            </value>
            <value>
                <fullName>6X4 Axle</fullName>
            </value>
            <value>
                <fullName>6X6 Axle</fullName>
            </value>
            <value>
                <fullName>8X2 Axle</fullName>
            </value>
            <value>
                <fullName>8X4SS Axle</fullName>
            </value>
            <value>
                <fullName>8X4TS Axle</fullName>
            </value>
            <value>
                <fullName>10X4 Twin Stee Axle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>