unpackaged/main/default/objects/ETT_Fleet_Inspection__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Fleet Inspection</relationshipLabel>
    <relationshipName>Fleet_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>